@@ -69,6 +69,9 @@ div#navigation table {
 <div class="ulist">
 <ul>
 <li>
+<p>Updated cli library. #327</p>
+</li>
+<li>
 <p>Added all RTT output mode to bench. #326</p>
 </li>
 <li>
